# descale

./: LICENSE  README.md  cross-mingw-x86_64.txt  descale.c  descale.cpp  descale.py  meson.build  meson_options.txt
include/: descale.h
src/: avsplugin.c  common.h  descale.c  plugin.h  vsplugin.c
src/x86/: cpuinfo_x86.c  cpuinfo_x86.h  descale_avx2.c  descale_avx2.h
